[gd_scene load_steps=10 format=1]

[ext_resource path="res://scripts/menu_pause.gd" type="Script" id=1]
[ext_resource path="res://textures/ui/main_menu_bg.png" type="Texture" id=2]
[ext_resource path="res://textures/ui/paused_text.png" type="Texture" id=3]
[ext_resource path="res://textures/black16x16.png" type="Texture" id=4]
[ext_resource path="res://textures/ui/btn_resume.png" type="Texture" id=5]
[ext_resource path="res://textures/ui/btn_main_menu.png" type="Texture" id=6]
[ext_resource path="res://textures/ui/btn_settings.png" type="Texture" id=7]
[ext_resource path="res://textures/ui/btn_controls.png" type="Texture" id=8]

[sub_resource type="Animation" id=1]

resource/name = "fade_to_black"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("texture_black:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="menu_pause" type="Node"]

process/pause_mode = 2
script/script = ExtResource( 1 )

[node name="canvas" type="CanvasLayer" parent="."]

layer = 3
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="texture_bg" type="TextureFrame" parent="canvas"]

visibility/opacity = 0.95
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 640.0
margin/bottom = 480.0
texture = ExtResource( 2 )
stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="texture_paused_text" type="TextureFrame" parent="canvas"]

visibility/opacity = 0.9
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 202.0
margin/top = 224.0
margin/right = 435.0
margin/bottom = 277.0
texture = ExtResource( 3 )
stretch_mode = 0

[node name="texture_black" type="TextureFrame" parent="canvas"]

visibility/opacity = 0.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 640.0
margin/bottom = 480.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="anim" type="AnimationPlayer" parent="canvas"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/fade_to_black = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="container_btns" type="HBoxContainer" parent="canvas"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 126.0
margin/top = 326.0
margin/right = 508.0
margin/bottom = 364.0
alignment = 0
__meta__ = {
"_edit_group_": true
}

[node name="btn_resume" type="TextureButton" parent="canvas/container_btns"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 90.0
margin/bottom = 38.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="btn_main_menu" type="TextureButton" parent="canvas/container_btns"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 94.0
margin/top = 0.0
margin/right = 194.0
margin/bottom = 38.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="btn_settings" type="TextureButton" parent="canvas/container_btns"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 198.0
margin/top = 0.0
margin/right = 288.0
margin/bottom = 38.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="btn_controls" type="TextureButton" parent="canvas/container_btns"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 292.0
margin/top = 0.0
margin/right = 388.0
margin/bottom = 38.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 8 )
params/resize_mode = 0
params/stretch_mode = 0


